| Bug #19804 | Tests run with valgrind shows uninitialised value in yaSSL | ||
|---|---|---|---|
| Submitted: | 14 May 2006 15:59 | Modified: | 15 May 2006 18:35 |
| Reporter: | Kent Boortz | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.1.10-pre | OS: | Linux (Red Hat RHAS4 x86) |
| Assigned to: | Magnus BlÄudd | CPU Architecture: | Any |
[15 May 2006 18:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/6406

Description: alter_table, backup, and many other test cases gives valgrind errors, all like Thread 10: Conditional jump or move depends on uninitialised value(s) at 0x852387C: mySTL::list<yaSSL::SSL_SESSION*>::iterator mySTL::find_if<mySTL::list<yaSSL::SSL_SESSION*>::iterator, yaSSL::yassl_int_cpp_local2::sess_match>(mySTL::list<yaSSL::SSL_SESSION*>::iterator, mySTL::list<yaSSL::SSL_SESSION*>::iterator, yaSSL::yassl_int_cpp_local2::sess_match) (yassl_int.cpp:79) by 0x85236A6: yaSSL::Sessions::lookup(unsigned char const*, yaSSL::SSL_SESSION*) (list.hpp:128) by 0x8514831: SSL_get_session (ssl.cpp:242) by 0x84D5522: sslaccept (viossl.c:297) by 0x8203C7E: handle_one_connection (sql_parse.cc:978) by 0x786340: start_thread (in /lib/tls/libpthread-2.3.4.so) by 0x6066FD: clone (in /lib/tls/libc-2.3.4.so) How to repeat: Run test suite using valgrind on Red Hat AS4 x86