Bug#19804 Tests run with valgrind shows uninitialised value in yaSSL  - memset Connection.sessionID_ in Connection contructor  - From upstream yaSSL